--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.1",
+    "@types/node": "^20.2.4",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
     "antd": "^5.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,6 +28,7 @@
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
     "styled-components": "^5.3.10",
+    "typescript": "^5.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
